# A-paragraph-is-worth-a-thousand-captions

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: sample_cc3m_annotations.jsonl
results/ablations/: data_efficiency_results.json  pos_neg_scaling_results.json  table_data_efficiency.tex  table_pos_neg_scaling.tex
results/dataset_quality/: quality_eval_results.json
results/embedding_space/: alignment_coco.json  alignment_sharegpt4v.json
results/eval/: alignment_docci.json  alignment_flickr30k.json  text_truncation_results_docci.json  text_truncation_results_sharegpt4v.json
results/eval/Coco-Flickr/: baseline_blip_clip_flickr_coco_results.json  baseline_longclip_B_flickr_coco_results.json  baseline_longclip_L_flickr_coco_results.json
results/eval/Docci/: baseline_blip_clip_docci.json  baseline_longclip_B_docci.json  baseline_longclip_L_docci.json  eval_docci__cfg10_orig_randpos_para_20260319_011445.json  eval_docci__cfg1_original_train_val_original_20260225_154414.json  (+8 more)
results/qualitative/: metadata.json  qualitative_figures.tex
results/qualitative/sample_2/: query_text.txt
results/tables/: results_two_tables.tex  table_alignment_coco.tex  table_alignment_docci.tex  table_alignment_flickr30k.tex  table_alignment_sharegpt4v.tex  table_dataset_quality.tex  table_dataset_stats.tex  table_long_description.tex  table_short_caption.tex  table_text_truncation_docci.tex  table_text_truncation_sharegpt4v.tex  table_training_dynamics.tex
src/capara/: configs.py  eval_longclip.py  evaluate.py  train.py
tests/: make_fixture_shards.py  test_equivalence.py
(+76 files in other folders)
