[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capara"
version = "1.0.0"
description = "Caption or Paragraph? Long synthetic descriptions for image-text retrieval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.44",
    "datasets>=2.20",
    "Pillow>=10.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
# Only needed to re-run the GPT-4o dataset-quality judge.
quality = ["openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
capara-train = "capara.train:main"
capara-eval = "capara.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
